--- a/NEAT/config
+++ b/NEAT/config
@@ -1,7 +1,7 @@
 [NEAT]
 fitness_criterion     = max
 fitness_threshold     = 30000
-pop_size              = 50
+pop_size              = 100
 reset_on_extinction   = True
 
 [DefaultGenome]
@@ -67,14 +67,14 @@ weight_mutate_rate      = 0.2
 weight_replace_rate     = 0.1
 
 [DefaultSpeciesSet]
-compatibility_threshold = 2.5
+compatibility_threshold = 1.25
 
 [DefaultStagnation]
-species_fitness_func = max
+species_fitness_func = mean
 max_stagnation       = 15
 species_elitism      = 3
 
 [DefaultReproduction]
 elitism            = 2
 survival_threshold = 0.1    
-min_species_size = 2
+min_species_size = 3
