--- a/NEAT/config
+++ b/NEAT/config
@@ -1,13 +1,13 @@
 [NEAT]
-fitness_criterion     = max
-fitness_threshold     = 20000
-pop_size              = 100
-reset_on_extinction   = True
+fitness_criterion     = mean
+fitness_threshold     = 25000.16
+pop_size              = 50
+reset_on_extinction   = False
 
 [DefaultGenome]
 # node activation options
 activation_default      = tanh
-activation_mutate_rate  = 0.0
+activation_mutate_rate  = 0.00
 activation_options      = tanh
 
 # node aggregation options
@@ -18,10 +18,10 @@ aggregation_options     = sum
 # node bias options
 bias_init_mean          = 0.0
 bias_init_stdev         = 0.0
-bias_max_value          = 0.0
-bias_min_value          = 0.0
+bias_max_value          = 00.0
+bias_min_value          = 00.0
 bias_mutate_power       = 0.5
-bias_mutate_rate        = 0.3
+bias_mutate_rate        = 0.7
 bias_replace_rate       = 0.1
 
 # genome compatibility options
@@ -29,8 +29,8 @@ compatibility_disjoint_coefficient = 1.0
 compatibility_weight_coefficient   = 0.5
 
 # connection add/remove rates
-conn_add_prob           = 0.15
-conn_delete_prob        = 0.01
+conn_add_prob           = 0.8
+conn_delete_prob        = 0.5
 
 # connection enable options
 enabled_default         = True
@@ -40,13 +40,13 @@ feed_forward            = True
 initial_connection      = partial_direct 0.5
 
 # node add/remove rates
-node_add_prob           = 0.4
-node_delete_prob        = 0.1
+node_add_prob           = 0.8
+node_delete_prob        = 0.5
 
 # network parameters
-num_hidden              = 2
-num_inputs              = 14
-num_outputs             = 4 
+num_hidden              = 0
+num_inputs              = 15
+num_outputs             = 4
 
 # node response options
 response_init_mean      = 1.0
@@ -63,18 +63,17 @@ weight_init_stdev       = 1.0
 weight_max_value        = 30
 weight_min_value        = -30
 weight_mutate_power     = 0.5
-weight_mutate_rate      = 0.2
+weight_mutate_rate      = 0.8
 weight_replace_rate     = 0.1
 
 [DefaultSpeciesSet]
-compatibility_threshold = 1.5
+compatibility_threshold = 2.5
 
 [DefaultStagnation]
 species_fitness_func = max
-max_stagnation       = 15
+max_stagnation       = 20
 species_elitism      = 3
 
 [DefaultReproduction]
 elitism            = 2
-survival_threshold = 0.1    
-min_species_size = 2
+survival_threshold = 0.2
