--- a/NEAT/config
+++ b/NEAT/config
@@ -2,13 +2,13 @@
 fitness_criterion     = mean
 fitness_threshold     = 25000.16
 pop_size              = 50
-reset_on_extinction   = False
+reset_on_extinction   = True
 
 [DefaultGenome]
 # node activation options
-activation_default      = swish
+activation_default      = sigmoid
 activation_mutate_rate  = 0.00
-activation_options      = swish
+activation_options      = sigmoid
 
 # node aggregation options
 aggregation_default     = sum
@@ -18,8 +18,8 @@ aggregation_options     = sum
 # node bias options
 bias_init_mean          = 0.0
 bias_init_stdev         = 0.0
-bias_max_value          = 00.0
-bias_min_value          = 00.0
+bias_max_value          = 0.0
+bias_min_value          = 0.0
 bias_mutate_power       = 0.5
 bias_mutate_rate        = 0.7
 bias_replace_rate       = 0.1
@@ -37,14 +37,14 @@ enabled_default         = True
 enabled_mutate_rate     = 0.01
 
 feed_forward            = True
-initial_connection      = partial_direct 0.5
+initial_connection      = full_direct
 
 # node add/remove rates
-node_add_prob           = 0.8
-node_delete_prob        = 0.5
+node_add_prob           = 0.6
+node_delete_prob        = 0.4
 
 # network parameters
-num_hidden              = 6
+num_hidden              = 8
 num_inputs              = 12
 num_outputs             = 4
 
@@ -67,12 +67,12 @@ weight_mutate_rate      = 0.8
 weight_replace_rate     = 0.1
 
 [DefaultSpeciesSet]
-compatibility_threshold = 2.5
+compatibility_threshold = 3
 
 [DefaultStagnation]
 species_fitness_func = max
 max_stagnation       = 20
-species_elitism      = 3
+species_elitism      = 5
 
 [DefaultReproduction]
 elitism            = 2
